# test_frame_extraction_sam

./: .env.example  .gitignore  README.md  pyproject.toml  sam3_pipeline.md
src/slide_extractor/: __init__.py  cli.py  config.py  metrics.py  models.py  phase1_detection.py  phase2_geometry.py  phase3_tracking.py  phase4_output.py  pipeline.py  viz.py
